--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 
 <html>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
 <head>
     <title>Personal Webpage</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
